PRACTICAL WORK Multithreading and Asynchrony

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="welcome-section">
-        <h3>Добро пожаловать, <span class="username" th:text="${username}">Пользователь</span>!</h3>
+        <h3>Добро пожаловать, <span class="username" th:text="${user.firstName}">Пользователь</span>!</h3>
         <p class="mt-3">Вы успешно вошли в школьный электронный дневник</p>
     </div>
 </div>
